@@ -107,6 +107,17 @@ public:
    */
   NodeSet find(const Glib::ustring& xpath) const;
 
+  /** A map of namespace prefixes to namespace names.
+   */
+  typedef std::map<Glib::ustring, Glib::ustring> PrefixNsMap;
+
+  /** Find nodes from a XPath expression
+   * @param xpath The XPath of the nodes.
+   * @param namespaces A map of namespace prefixes to namespace names to be registered.
+   */
+  NodeSet find(const Glib::ustring& xpath, const PrefixNsMap& namespaces) const;
+
+
   ///Access the underlying libxml implementation.
   _xmlNode* cobj();
 
